--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/akula.ico" />
+    <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/akula.ico" />
     <title>Nägels Card Game Online</title>
   </head>
   <body>
