--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@300&display=swap" rel="stylesheet">
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/akula.ico" />
     <link rel="icon" type="image/x-icon" href="%PUBLIC_URL%/akula.ico" />
     <title>Nägels Card Game Online</title>
